--- a/_posts/2020-12-25-AWS .md
+++ b/_posts/2020-12-25-AWS .md
@@ -23,13 +23,21 @@ Cloud computingis the on-demand delivery of compute power, database, storage, ap
 
  These resources run on server computers that are located in large data centers in different locations around the world. When you use a cloud service provider like AWS, that service provider owns the computers that you are using. These resources can be used together like building blocks to build solutions that help meet business goals and satisfy technology requirements.
 
+Cloud computing enables you to stop thinking of your infrastructure as hardware, and instead think of (and use) it as software
+
 Infrastructure as hardware
 Hardware solutions:
 - Require space, staff, physical security, planning, capital expenditure
 - Have a long hardware procurement cycle
 - Require you to provision capacity by guessing theoretical maximum peaks.
 
- In the traditional computing model, infrastructure is thought of as hardware. Hardware solutions are physical, which means they require space, staff, physical security, planning, and capital expenditure. In addition to significant upfront investment, another prohibitive aspect of traditional computing is the long hardware procurement cycle that involves acquiring, provisioning, and maintaining on-premises infrastructure. With a hardware solution, you must ask if there is enough resource capacity or sufficient storage to meet your needs, and you provision capacity by guessing theoretical maximum peaks. If you don’t meet your projected maximum peak, then you pay for expensive resources that stay idle. If you exceed your projected maximum peak, then you don’t have sufficient capacity to meet your needs. And if your needs change, then you must spend the time, effort, and money required to implement a new solution.For example, if you wanted to provision a new website, you would need to buy the hardware, rack and stack it, put it in a data center, and then manage it or have someone else manage it. This approach is expensive and time-consuming.
+ In the traditional computing model, infrastructure is thought of as hardware. Hardware solutions are physical, which means they require space, staff, physical security, planning, and capital expenditure.
+
+ In addition to significant upfront investment, another prohibitive aspect of traditional computing is the long hardware procurement cycle that involves acquiring, provisioning, and maintaining on-premises infrastructure.
+
+ With a hardware solution, you must ask if there is enough resource capacity or sufficient storage to meet your needs, and you provision capacity by guessing theoretical maximum peaks. If you don’t meet your projected maximum peak, then you pay for expensive resources that stay idle. If you exceed your projected maximum peak, then you don’t have sufficient capacity to meet your needs. And if your needs change, then you must spend the time, effort, and money required to implement a new solution.
+
+ For example, if you wanted to provision a new website, you would need to buy the hardware, rack and stack it, put it in a data center, and then manage it or have someone else manage it. This approach is expensive and time-consuming.
 
 Infrastructure as software
 Software solutions:
@@ -37,7 +45,13 @@ Software solutions:
 - Can change more quickly, easily, and cost-effectively than hardware solutions
 - Eliminate the undifferentiated heavy-lifting tasks
 
-By contrast, cloud computing enables you to think of your infrastructure as software. Software solutions are flexible. You can select the cloud services that best match your needs, provision and terminate those resources on-demand, and pay for what you use. You can elastically scale resources up and down in an automated fashion. With the cloud computing model, you can treat resources as temporary and disposable. The flexibility that cloud computing offers enables businesses to implement new solutions quickly and with low upfront costs. Compared to hardware solutions, software solutions can change much more quickly, easily, and cost-effectively. Cloud computing helps developers and IT departments avoid undifferentiated work like procurement, maintenance, and capacity planning, thus enabling them to focus on what matters most. As cloud computing has grown in popularity, several different service models and deployment strategies have emerged to help meet the specific needs of different users. Each type of cloud service model and deployment strategy provides you with a different level of control, flexibility, and management. Understanding the differences between these cloud service models and deployment strategies can help you decide what set of services is right for your needs.
+By contrast, cloud computing enables you to think of your infrastructure as software. Software solutions are flexible. You can select the cloud services that best match your needs, provision and terminate those resources on-demand, and pay for what you use. You can elastically scale resources up and down in an automated fashion. With the cloud computing model, you can treat resources as temporary and disposable. The flexibility that cloud computing offers enables businesses to implement new solutions quickly and with low upfront costs.
+
+Compared to hardware solutions, software solutions can change much more quickly, easily, and cost-effectively.
+
+Cloud computing helps developers and IT departments avoid undifferentiated work like procurement, maintenance, and capacity planning, thus enabling them to focus on what matters most.
+
+As cloud computing has grown in popularity, several different service models and deployment strategies have emerged to help meet the specific needs of different users. Each type of cloud service model and deployment strategy provides you with a different level of control, flexibility, and management. Understanding the differences between these cloud service models and deployment strategies can help you decide what set of services is right for your needs.
 
 There are three main cloud service models. Each model represents a different part of the cloud computing stack and gives you a different level of control over your IT resources:
 
@@ -45,11 +59,12 @@ There are three main cloud service models. Each model represents a different par
 - Platform as a service (PaaS): Services in this category reduce the need for you to manage the underlying infrastructure (usually hardware and operating systems) and enable you to focus on the deployment and management of your applications.
 - Software as a service (SaaS): Services in this category provide you with a completed product that the service provider runs and manages. In most cases, software as a servicerefers to end-user applications. With a SaaS offering, you do not have to think about how the service is maintained or how the underlying infrastructure is managed. You need to think only about how you plan to use that particular piece of software. A common example of a SaaS application is web-based email, where you can send and receive email without managing feature additions to the email product or maintaining the servers and operating systems that the email program runs on.
 
-
-
 There are three main cloud computing deployment models, which represent the cloud environments that your applications can be deployed in:
+
 - Cloud: A cloud-based application is fully deployed in the cloud, and all parts of the application run in the cloud. Applications in the cloud have either been created in the cloud or have been migrated from an existing infrastructure to take advantage of the benefits of cloud computing. Cloud-based applications can be built on low-level infrastructure pieces or they can use higher-level services that provide abstraction from the management, architecting, and scaling requirements of core infrastructure.
+
 - Hybrid: A hybrid deployment is a way to connect infrastructure and applications between cloud-based resources and existing resources that are not located in the cloud. The most common method of hybrid deployment is between the cloud and existing on-premises infrastructure. This model enables an organization to extend and grow their infrastructure into the cloud while connecting cloud resources to internal systems.
+
 - On-premises: Deploying resources on-premises, using virtualization and resource management tools, is sometimes called private cloud. While on-premises deployment does not provide many of the benefits of cloud computing, it is sometimes sought for its ability to provide dedicated resources. In most cases, this deployment model is the same as legacy IT infrastructure, but it might also use application management and virtualization technologies to increase resource utilization.
 
 
@@ -89,22 +104,23 @@ By contrast, a variable expenseis an expense that the person who bears the cost 
 
 **Advantage #6—Go global in minutes:** You can deploy your application in multiple AWSRegions around the world with just a few clicks. As a result, you can provide a lower latency and better experience for your customers simply and at minimal cost.
 
-
-
+<font color= E675A7>
 Remarks:
+
 The six advantages of cloud computing:
+
 - Trade capital expense for variable expense
+
 - Massive economies of scale
+
 - Stop guessing capacity
+
 - Increase speed and agility
+
 - Stop spending money on running and maintaining data centers
+
 - Go global in minutes
-
-
-
-
-
-
+</font>
 
 
 ## <font color= 977FD7>Introduction to Amazon Web Services (AWS)</font>
@@ -203,6 +219,9 @@ Remarks:
 
 
 ## <font color= 977FD7>Fundamentals of pricing.</font>
+
+
+<img src="{{ '/pics/AWSpic/屏幕截图 2021-01-05 204932' | relative_url }}">
 
 There are three fundamental drivers of cost with AWS: **compute**, **storage**, and **outbound data transfer**. These characteristics vary somewhat, depending on the AWS product and pricing model you choose.
 
