--- a/_posts/2020-12-25-AWS .md
+++ b/_posts/2020-12-25-AWS .md
@@ -220,9 +220,6 @@ Remarks:
 
 ## <font color= 977FD7>Fundamentals of pricing.</font>
 
-
-<img src="{{ '/pics/AWSpic/屏幕截图 2021-01-05 204932.png' | relative_url }}">
-
 ![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 204932.png)
 
 There are three fundamental drivers of cost with AWS: **compute**, **storage**, and **outbound data transfer**. These characteristics vary somewhat, depending on the AWS product and pricing model you choose.
@@ -242,6 +239,8 @@ AWS offers a range of cloud computing services. For each service, you pay for ex
 Unless you build data centers for a living, you might have spent too much time and money building them. With AWS, you pay only for the services that you consume with no large upfront expenses. You can lower variable costs, so you no longer need to dedicate valuable resources to building costly infrastructure, including purchasing servers, software licenses, or leasing facilities.
 
 Quickly adapt to changing business needs and redirect your focus on innovation and invention by paying only for what you use and for as long as you need it. All AWS services are available on demand, require no long-term contracts, and have no complex licensing dependencies.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 210216.png)
 
 For certain services like Amazon Elastic Compute Cloud (Amazon EC2) and Amazon Relational Database Service (Amazon RDS), you can invest in reserved capacity. With Reserved Instances, you can save up to 75 percent over equivalent on-demand capacity. Reserved Instances are available in three options:
 - All Upfront Reserved Instance (or AURI)
