--- a/_posts/2020-12-25-AWS .md
+++ b/_posts/2020-12-25-AWS .md
@@ -261,6 +261,7 @@ These optimizations and the substantial and growing economies of scale of AWS re
 
 Another benefit of AWS growth is that future, higher-performing resources replace current ones for no extra charge.
 
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 210429.png)
 
 To help new AWS customers get started in the cloud, AWS offers a free usage tier (the AWSFree Tier) for new customers for up to 1 year. The AWS Free Tier applies to certain services and options. If you are a new AWS customer, you can run a free Amazon Elastic Compute Cloud (Amazon EC2) T2 micro instance for a year, while also using a free usage tier for Amazon S3, Amazon Elastic Block Store (Amazon EBS), Elastic Load Balancing, AWS data transfer, and other AWS services.
 
