--- a/_posts/2020-12-25-AWS .md
+++ b/_posts/2020-12-25-AWS .md
@@ -297,6 +297,8 @@ While the services themselves are free, the resources that they provision might 
 
 ## <font color= 977FD7>Total Cost of Ownership.</font>
 
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 210545.png)
+
 On-premises versus cloud is a question that many businesses ask. The difference between these two options is how they are deployed.
 
 An on-premises infrastructure is installed locally on a company’s own computers and servers. There are several fixed costs, also known as capital expenses, that are associated with the traditional infrastructure. Capital expenses include facilities, hardware, licenses, and maintenance staff. Scaling up can be expensive and time-consuming. Scaling down does not reduce fixed costs.
