--- a/_posts/2020-12-25-AWS .md
+++ b/_posts/2020-12-25-AWS .md
@@ -307,7 +307,9 @@ A cloud infrastructure is purchased from a service provider who builds and maint
 
 It is difficult to compare an on-premises IT delivery model with the AWS Cloud. The two are different because they use different concepts and terms. Using on-premises IT involves a discussion that is based on capital expenditure, long planning cycles, and multiple components to buy, build, manage, and refresh resources over time.Using the AWS Cloud involves a discussion about flexibility, agility, and consumption-based costs.
 
-ou can identify the best option by comparing the on-premises solution to a cloud solution. Total Cost of Ownership (or TCO) is a financial estimate that is intended to help buyers and owners determine the direct and indirect costs of a product or system. TCO includes the cost of a service, plus all the costs that are associated with owning the service.
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 210624.png)
+
+you can identify the best option by comparing the on-premises solution to a cloud solution. Total Cost of Ownership (or TCO) is a financial estimate that is intended to help buyers and owners determine the direct and indirect costs of a product or system. TCO includes the cost of a service, plus all the costs that are associated with owning the service.
 
 You might want to compare the costs of running an entire infrastructure environment for a specific workload in an on-premises or collocation facility to the same workload running on a cloud-based infrastructure. This comparison is done for budgeting purposes or to build a business case for business decisions about the optimal deployment solution.
 
