--- a/_posts/2020-12-25-AWS .md
+++ b/_posts/2020-12-25-AWS .md
@@ -313,6 +313,8 @@ you can identify the best option by comparing the on-premises solution to a clou
 
 You might want to compare the costs of running an entire infrastructure environment for a specific workload in an on-premises or collocation facility to the same workload running on a cloud-based infrastructure. This comparison is done for budgeting purposes or to build a business case for business decisions about the optimal deployment solution.
 
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 210838.png)
+
 Some of the costs that are associated with data center management include:
 - **Server** costs for both hardware and software, and facilities costs to house the equipment.
 - **Storage** costs for the hardware, administration, and facilities.
@@ -344,6 +346,8 @@ What is the difference in the costs? Remember, the on-premises solution is predi
 
 In contrast, the AWS solution is commissioned when needed and decommissioned when the resources are no longer in use, which results in lower overall costs.
 
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 210922.png)
+
 AWS offers the **AWS Pricing Calculator** to help you estimate a monthly AWS bill. You can use this tool to explore AWS services and create an estimate for the cost of your use cases on AWS. You can model your solutions before building them, explore the price points and calculations behind your estimate, and find the available instance types and contract terms that meet your needs. This enables you to make informed decisions about using AWS. You can plan your AWS costs and usage or price out setting up a new set of instances and services.
 
 The AWS Pricing Calculator helps you:
@@ -362,7 +366,7 @@ AWS Pricing Calculator estimates are broken into:
 
 Within a group, you can see how much each service is estimated to cost. If you want to price out different ways to build your AWS setup, you can use different groups for each variation of your setup and compare the estimates for the different setups.
 
-Break up into groups of four or five and use the AWS Pricing Calculator and the specifications provided to develop a cost estimate.
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 211050.png)
 
 Hard benefits include reduced spending on compute, storage, networking, and security. They also include reductions in hardware and software purchases; reductions in operational costs, backup, and disaster recovery; and a reduction in operations personnel.
 
