--- a/_posts/2020-12-25-AWS .md
+++ b/_posts/2020-12-25-AWS .md
@@ -487,8 +487,57 @@ AWS Budgets uses the cost visualization that is provided by Cost Explorer to sho
 
 You can also use AWS Budgets to create notifications for when you go over your budget for the month, or when your estimated costs exceed your budget. Budgets can be tracked at the monthly, quarterly, or yearly level, and you can customize the start and end dates. Budget alerts can be sent via email or via Amazon Simple Notification Service (Amazon SNS).
 
-The AWS Cost and Usage Report is a single location for accessing comprehensive information about your AWS costs and usage. This tool lists the usage for each service category that is used by an account (and its users) in hourly or daily line items, and any tax that you activated for tax allocation purposes. 
+The AWS Cost and Usage Report is a single location for accessing comprehensive information about your AWS costs and usage. This tool lists the usage for each service category that is used by an account (and its users) in hourly or daily line items, and any tax that you activated for tax allocation purposes.
 
 You can choose to have AWS to publish billing reports to an S3 bucket. These reports can be updated once a day.
 
 ## <font color= 977FD7>Technical support.</font>
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 212508.png)
+
+Whether you are new or continuing to adopt AWS services and applications as your business solutions, AWS want help you do amazing things with AWS. AWS Support can provide youwith a unique combination of tools and expertise based on your current or future planned use cases.
+
+AWS Support was developed to provide complete support and the right resources to aid your success. We want to support all our customers, including customers that might be experimenting with AWS, those that are looking for production uses of AWS, and also customers that use AWS as a business-critical resource. AWS Support can vary the type of support that is provided, depending on the customer’s needs and goals
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 212544.png)
+
+With AWS, customers can plan, deploy, and optimize with confidence.
+
+If you would like proactive guidance, AWS Support hasTechnical Account Managers (TAMs) who are designated as that user’s primary point of contact. The TAM can provide guidance, architectural review, and continuous ongoing communication to keep you informed and prepared as you plan, deploy, and optimize your solutions.
+
+If you want to ensure that you follow best practices to increase performance and fault tolerance in the AWS environment, AWS Support hasAWS Trusted Advisor. AWS Trusted Advisor is like a customized cloud expert. It is an online resource that checks for opportunities to reduce monthly expenditures and increase productivity.
+
+For account assistance, the Support Concierge is a billing and account expert who will provide quick and efficient analysis on billing and account issues. The concierge addresses all non-technical billing and account-level inquiries.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 212715.png)
+
+AWS wants you to be able to plan, deploy, and optimize with confidence. We have developed specific plans to support you, including Basic, Developer, Business, and Enterprise support plans.
+
+- The Basic Support Plan offers:
+  - 24/7 access to customer service, documentation, whitepapers and support forums.
+  - Access to six core Trusted Advisor checks.
+  - Access to Personal Health Dashboard.
+- The Developer Support Plan offers resources for customers that are testing or doing early development on AWS, and any customers who:
+  - Want access to guidance and technical support.
+  - Are exploring how to quickly put AWS to work.
+  - Use AWS for non-production workloads or applications.
+- The Business Support Plan offers resources for customers that are running production workloads on AWS, and any customers who:
+  - Run one or more applications in production environments.
+  - Have multiple services activated, or use key services extensively.
+  - Depend on their business solutions to be available, scalable, and secure.
+- The Enterprise Support Plan offers resources for customers that are running business and mission-critical workloads on AWS, and any customers who want to:
+  - Focus on proactive management to increase efficiency and availability.
+  - Build and operate workloads that follow AWS best practices.
+  - Use AWS expertise to support launches and migrations.
+  - Use a Technical Account Manager (TAM), who provides technical expertise for the full range of AWS services and obtains a detailed understanding of your use case and technology architecture. The Technical Account Manager is the primary point of contact for ongoing support needs.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 213027.png)
+
+It addition to understanding the costs that are associated with different support plans, it is critical that you understand the service levels that are associated with each plan. In addition to the support plan you select, the case severity will drive the type of response that you receive. There are five different severity levels:
+- **Critical**– Your business is at risk. Critical functions of your application are unavailable.
+- **Urgent**– Your business is significantly impacted. Important functions of your application are unavailable.
+- **High**– Important functions of your application are impaired or degraded.
+- **Normal**– Non-critical functions of your application are behaving abnormally, or you have a time-sensitive development question.
+- **Low**– You have a general development question, or you want to request a feature.
+
+Note that there is no case support with the Basic Support Plan. These response times should be considered when you determine which support plan is best for your organization.
